# SolarThermalLoop

./: README.md  app.py  pyproject.toml  requirements.txt
PassiveLogicInterview/: ORGANIZATION_SUMMARY.md  README.md  pyproject.toml
PassiveLogicInterview/.claude/: settings.local.json
PassiveLogicInterview/archive/v1.0_baseline/: solar_thermal_simulation.py
PassiveLogicInterview/archive/v2.0_working_2026-02-17/: README.md  controller.py  enhanced_models.py
PassiveLogicInterview/archive/v2.0_working_2026-02-17/examples/: example_upgrade.py  (+2 more)
PassiveLogicInterview/docs/: PROJECT_STATUS.md
PassiveLogicInterview/examples/: example_upgrade.py  generate_presentation_plots.py  realistic_simulation.py  winter_scenario.py
PassiveLogicInterview/src/: __init__.py
PassiveLogicInterview/tests/: test_heat_pump.py  test_solar_radiation.py
archive/: README.md
archive/v1.0_baseline/: README.md  VERSION_NOTES.md
archive/v2.0_working_2026-02-17/: ORGANIZATION_SUMMARY.md  pyproject.toml
archive/v2.0_working_2026-02-17/docs/: WINTER_SCENARIO_SUMMARY.md
archive/v2.0_working_2026-02-17/examples/: modular_simulation.py
archive/v2.0_working_2026-02-17/src/: components.py
archive/v2.0_working_2026-02-17/tests/: README.md  test_components.py  test_integration.py
docs/: ARCHITECTURE.md  MODULAR_SYSTEM_README.md
examples/: generate_presentation_plots.py  modular_simulation.py  realistic_simulation.py  winter_scenario.py
src/: components.py  control.py  models.py
tests/: test_components.py  test_integration.py  test_pumps.py  test_stratification.py
(+1 files in other folders)
