[project]
name = "solar-thermal-simulation"
version = "2.0.0"
description = "Solar-assisted heat pump system simulation for Passive Logic interview"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
